--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "console.tap": "0.2.3",
     "framer-motion": "1.5.0",
     "lodash": "4.17.15",
+    "prettier": "^1.18.2",
     "ramda": "0.26.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
